detekt-rules/naming/src/test/resources/InvalidPackageDeclarationSpec/src/com/example_extra/File.kt
package com.example_extra

class C
